# cendro

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  constraints.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  prompts.py
cendro/: __init__.py  cli.py
configs/: qlora_3b.yaml  qlora_7b.yaml  qlora_7b_colab.yaml
dataset/: README.md  curated_pairs.jsonl  distilled_pairs.jsonl  gold_pairs.jsonl  heldout_pairs.jsonl  seed_pairs.jsonl  train_pairs.jsonl
dataset/samples/: README.md  bash_unquoted.sh  go_ignored_error.go  go_loopvar_goroutine.go  java_resource_leak.java  js_async_sequential.js  js_eval_input.js  js_loose_equality.js  js_promise_no_await.js  py_broad_retry.py  py_cache_unbounded.py  py_command_injection.py  py_datetime_naive.py  py_dict_mutation.py  py_division_stats.py  py_file_resource.py  py_float_money.py  py_identity_compare.py  py_input_validation.py  py_missing_auth_check.py  py_n_plus_one.py  py_no_timeout.py  py_password_handling.py  py_path_traversal.py  py_pickle_deser.py  py_race_condition.py  py_regex_in_loop.py  py_sql_injection.py  py_string_concat_loop.py  py_weak_random_token.py  rust_unwrap.rs  ts_floating_promise.ts  ts_null_deref.ts
docs/: ARCHITECTURE.md  TRAINING.md  WORKFLOWS.md
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
github-action/: README.md  action.yml  review_pr.py
model/: _common.py  dpo_train.py  evaluate.py  inference.py  train.py
scripts/: build_gold_dataset.py  check_pairs.py  convert_to_gguf.py  fix_gold_rejected.py  generate_preferences.py  generate_samples.py  merge_dataset.py  split_dataset.py
tests/: test_api.py  test_cli.py  test_dataset.py  test_github_action.py  test_inference.py  test_prompts.py
