[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cendro"
version = "0.1.0"
description = "Local AI code reviewer - private, fast, opinionated."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cendro contributors" }]
keywords = ["code-review", "llm", "local-ai", "ollama", "qlora", "dpo"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "ollama>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",          # required by fastapi.testclient
    "ruff>=0.5",
]
train = [
    "torch>=2.2",
    "transformers>=4.44",
    "peft>=0.11",
    "trl>=0.9",
    "bitsandbytes>=0.43",
    "datasets>=2.19",
    "accelerate>=0.30",
    "pyyaml>=6.0",
    "anthropic>=0.40",      # default judge for preference-pair generation
]

[project.urls]
Homepage = "https://github.com/yin-0128/cendro"
Repository = "https://github.com/yin-0128/cendro"

[project.scripts]
cendro = "cendro.cli:main"

[tool.setuptools]
packages = ["cendro", "api", "model"]

[tool.ruff]
line-length = 100
target-version = "py310"
# dataset/samples holds deliberately buggy code (training material) — don't lint it.
extend-exclude = ["dataset"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Hand-authored review text (data, not logic) — long string literals are expected.
"scripts/build_gold_dataset.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
