[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cendro"
version = "0.1.0"
description = "Local AI code reviewer - private, fast, opinionated."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cendro contributors" }]
keywords = ["code-review", "llm", "local-ai", "ollama", "qlora", "dpo"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# Upper bounds cap the next major so an untested release can't silently break installs.
# For byte-for-byte reproducible installs, pin transitive deps too — see constraints.txt.
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "ollama>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",     # required by fastapi.testclient
    "ruff>=0.5,<1.0",
]
train = [
    "torch>=2.2,<3.0",
    "transformers>=4.44,<5.0",
    "peft>=0.11,<1.0",
    "trl>=0.9,<1.0",
    "bitsandbytes>=0.43,<1.0",
    "datasets>=2.19,<4.0",
    "accelerate>=0.30,<2.0",
    "pyyaml>=6.0,<7.0",
    "anthropic>=0.40,<1.0",  # default judge for preference-pair generation
]

[project.urls]
Homepage = "https://github.com/yin-0128/cendro"
Repository = "https://github.com/yin-0128/cendro"

[project.scripts]
cendro = "cendro.cli:main"

[tool.setuptools]
packages = ["cendro", "api", "model"]

[tool.ruff]
line-length = 100
target-version = "py310"
# dataset/samples holds deliberately buggy code (training material) — don't lint it.
extend-exclude = ["dataset"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Hand-authored review text (data, not logic) — long string literals are expected.
"scripts/build_gold_dataset.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
